centering nav items

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -8,7 +8,7 @@
   }
   .navbar-links{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 100%;
   }
