adjusted changes per steven recommendations

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 nav {
-  background-color: #012f01;
+  background-color: #042104;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -128,7 +128,7 @@ button {
 
 body {
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'sequel', sans-serif;
   /* background-color:lightslategray; */
 }
 
@@ -396,5 +396,11 @@ button:disabled {
   form {
     width: 80vw;
     min-width: initial;
+  }
+  a {
+    color: white;
+    text-decoration: none;
+    font-size: 17px;
+    margin: 0 5px;
   }
 }
