--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #012f01;
+    background-color: #042104;
     color: #fff;
     padding: 20px;
   }
