--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -35,6 +35,14 @@
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    /* background-image: url('../../images/Farm.jpg');
+    background-size: cover; */
+    /* height: 100vh; */
+    /* margin: 0;
+    padding: 0; */
+    /* backgroundPosition: center;
+    backgroundSize: cover;
+    backgroundRepeat: "no-repeat" */
   }
   
   .home-heading {
@@ -54,6 +62,11 @@
     margin-top: -50px;
     font-family: sequel;
     margin-bottom: 10px;
+  }
+
+  .logo_style{
+    width: 50%;
+    margin: 20px;
   }
 
   .home-text {
@@ -78,7 +91,7 @@
   }
 
   .home-slider img {
-    border-radius: 5px;
+    border-radius: 0px;
   }
 
   .home-slider img {
