--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-nav {
+/* nav {
   background-color: #042104;
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px;
-}
+} */
 
 a {
   color: white;
@@ -48,11 +48,6 @@ nav li a {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
-}
-
-h1 {
-  font-size: 36px;
-  margin-bottom: 20px;
 }
 
 p {
@@ -103,7 +98,7 @@ button {
   border-radius: 5px;
   border: none;
   font-size: 16px;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
