--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,7 +1,4 @@
 .cardMain-about{
-    /* flex-basis: 225px; */
-    /* box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.25); */
-    /* width: 175px; */
     font-size: 12px;
     flex: 0 0 auto;         /* ADD */
     display: flex;          /* ADD */
@@ -9,4 +6,20 @@
     position: relative;
     gap: 20px;
   
+  }
+  .overlay-text {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    font-family: 'Arial', sans-serif; 
+    letter-spacing: 1px; /* Add some letter spacing */
+  }
+
+  .img-about{
+    width: 100%;
+    height: 100vh;
   }
