--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,48 +1,21 @@
-/* .home-container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 50px;
-    text-align: center;
+  .line-spacing-top{
+    margin: 3rem 10rem 0rem 10rem;
   }
-  
-  .home-heading {
-    font-size: 36px;
-    font-weight: bold;
-    margin-bottom: 30px;
+
+  .line-spacing-bottom{
+    margin: 0rem 10rem 3rem 10rem;
   }
-  
-  .home-text {
-    font-size: 18px;
-    line-height: 1.5;
-    margin-bottom: 20px;
+
+  .quotes-font{
+    font-family: 'Dancing Script', cursive;
+    font-size: 80px;
+    margin-bottom: -40px;
   }
-  
-  .home-text a {
-    color: #0077cc;
-    text-decoration: none;
-  }
-  
-  .home-text a:hover {
-    text-decoration: underline;
-  } */
   .home-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* margin-top: 50px; */
-    /* padding: 20px; */
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    /* background-image: url('../../images/Farm.jpg');
-    background-size: cover; */
-    /* height: 100vh; */
-    /* margin: 0;
-    padding: 0; */
-    /* backgroundPosition: center;
-    backgroundSize: cover;
-    backgroundRepeat: "no-repeat" */
   }
   
   .home-heading {
