IMPROVEMENT: add z-index so the nav isn't blocked

--- a/src/components/navbar/NavigationBar.css
+++ b/src/components/navbar/NavigationBar.css
@@ -84,6 +84,8 @@ nav {
 		gap: 1.5rem;
     transition: all 0.3s ease;
     overflow-y: auto;
+    z-index: 9999; /* any high value to ensure it's above other elements */
+
   
   }
 
