IMPROVEMENT: changing the home pic and adding text

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -17,6 +17,12 @@
     align-items: center;
     justify-content: center;
   }
+
+  .text-font-history{
+    color: white;
+    padding: 50px 200px;
+    background-color: darkolivegreen;
+  }
   
   .home-heading {
     font-size: 36px;
