--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -18,6 +18,20 @@
     justify-content: center;
   }
 
+  .header-card{
+    font-weight: 600;
+    color: darkolivegreen;
+  }
+
+  .text-space{
+    padding: "0px 150px"; 
+    margin: "20px"
+  }
+
+  .body-card{
+    font-size: small;
+  }
+
   .text-font-history{
     color: white;
     padding: 50px 200px;
@@ -40,7 +54,7 @@
     text-align: center;
     margin-top: -50px;
     font-family: sequel;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
   }
 
   .logo_style{
@@ -51,13 +65,18 @@
   .home-text {
     font-size: 18px;
     line-height: 1.5;
-    margin-bottom: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
     text-align: center;
+    padding: 20px;
+    color: white;
+    background-color: darkolivegreen;
   }
   
   .home-text b {
     font-weight: bold;
+  }
+  .home-text{
+    margin: 0px 0px -16px;
   }
   
   .home-text a {
@@ -77,4 +96,20 @@
     width: 100%;
     max-height: 700px;
     /* object-fit: ; */
+  }
+
+  .text-buchery{
+    padding: 50px 200px;
+  }
+
+  @media only screen and (max-width: 450px){
+    .text-font-history{
+      color: white;
+      padding: 20px 50px;
+      background-color: darkolivegreen;
+    }
+
+    .text-buchery{
+      padding: 20px 50px;
+    }
   }
